app/assets/v2/css/base.css
/* ... */
body.bounty_details #left_actions,
body.bounty_details #right_actions {
    padding-top: 20px;
    padding-bottom: 10px;
}

body.bounty_details #bounty_details #left_actions {
    padding-top: 5px;
    padding-bottom: 5px;
}

body.bounty_details #left_actions a,
body.bounty_details #right_actions a {
    margin: 0px auto;
}

body.bounty_details #right_actions a {
    margin-right: 20px;
    margin-bottom: 20px;
}

body.bounty_details #right_actions h5 {
    font-weight: 900;
}

body.bounty_details .boldLabel {
    color: #999999;
    font-weight: 900;
}

body.bounty_details #bounty_details a.btn{
    border-radius: 0.2rem;
}

body.bounty_details a.btn-github-comment {
    color: #000;
    background: url(/static/v2/images/icon-msg-16.png) no-repeat left transparent;
    display: block;
    float: left;
    padding-left: 20px;
}
body.bounty_details a.btn-github-comment:hover {
    background: url(/static/v2/images/icon-msg-red-16.png) no-repeat left transparent;
}

body.bounty_details a.btn-darkGrey {
    background-color: #e7e7e7;
    color: #474747;
}

body.bounty_details a.btn-darkGrey:hover {
    background-color: #eee;
}

body.bounty_details a.btn-darkBlue:hover {
    background-color: #0a012b;
}

body.bounty_details #title {
    text-align: left;
    padding-top: 20px;
    padding-bottom: 20px;
}

.transaction-status {
    position: relative;
    width: 80%;
    left: 10%;
    top: 30px;
    margin-bottom: 30px;
    border-radius: 2px;
    padding: 3vh 5vw;
    text-align: center;
}

.waiting_room_entertainment {
    font-style: italic;
    text-align: center;
}

.quote-container {
    width: 65%;
    margin: 5% auto;
}

.quote_text {
    color: #4A4A4A;
    font-style: italic;
    font-weight: 700;
    font-size: 22px;
    letter-spacing: 0.75px;
}

.quote_author {
    color: #70EFBE;
    margin-top: 20px;
    font-style: italic;
    font-weight: 700;
    font-size: 22px;
    letter-spacing: 0.75px;
}

#gitcoin_buttons #example img {
    width: 500px;
    max-width: 100%
}

#gitcoin_buttons .flex-column {
    border-radius: 5px;
}

#gitcoin_buttons .btn.delta_1 {
    background-color: #f9006c;
    border: 1px solid white;
}

#gitcoin_buttons .btn.delta_1 span {
    color: #f9006c;
    background-color: white;
}

#gitcoin_buttons .btn.delta_2 {
    background-color: #3e00ff;
    border: 1px solid white;
}

#gitcoin_buttons .btn.delta_2 span {
    color: #3e00ff;
    background-color: white;
}

#gitcoin_buttons .btn.delta_3 {
    background-color: white;
    border: 1px solid black;
    color: black;
}

#gitcoin_buttons .btn.delta_3 img {
    filter: invert(100%);
}

#gitcoin_buttons .btn.delta_3 span {
    color: white;
    background-color: black;
}

#gitcoin_buttons .btn {
    font-weight: bold;
    margin: 10px;
}

#gitcoin_buttons .btn img {
    width: 24px;
    height: 24px;
}

#gitcoin_buttons .btn span {
    font-size: 10px;
    text-transform: uppercase;;
    border-radius: 4px;
    color: #100136;
    padding: 2px 10px;
    background-color: white;
    margin-left: 5px;
}

.terms_container a {
    color:black;
}

.press_container {
    background: white;
}

.press_container img {
    max-width:  200px;
    max-height: 100px;
    filter: grayscale(100%);
    -moz-filter: grayscale(100%);
    -ms-filter: grayscale(100%);
    -o-filter: grayscale(100%);
}

.press_container img:hover {
    max-width:  200px;
    max-height: 100px;
    filter: grayscale(0%);
    -moz-filter: grayscale(0%);
    -ms-filter: grayscale(0%);
    -o-filter: grayscale(0%);
}

.profile_details .dot {
    border-radius: 6px;
    width: 12px;
    height: 12px;
    margin-left: -55px;
    float: left;
    vertical-align: middle;
    margin-top: 20px;
}

.profile_details li:nth-child(2n+0) .dot {
    background: #919191;
}

.profile_details li:nth-child(2n+1) .dot {
    background: black;
}

.profile_details #stats {
    padding-top: 5px;
    padding-left: 2px;
    padding-right: 2px;
    width: 100%;
}

.profile_details #stats li {
    list-style: none;
    display: inline-block;
    background-color: #efefef;
    width: 24%;
    padding: 5px 10px;
    margin-left: 2px;
    text-align: center;
    font-size: 32px;
    font-weight: bold;
    border-radius: 3px;
}

.profile_details #stats li span {
    font-size: 14px;
    display: block;
    font-weight: normal;
    color: #8a8a8a;
}

.profile_details #hero {
    width: 100%;
    height: 370px;
    background-color: #0d053a;
    background: -webkit-radial-gradient(#3e265a 20%, #1e063a, #1e063a);
    background: -o-radial-gradient(#3e265a 20%, #1e063a, #1e063a);
    background: -moz-radial-gradient(#3e265a 20%, #1e063a, #1e063a);
    background: radial-gradient(#3e265a 20%, #1e063a , #1e063a);
    color: white;
    text-align: center;
}

.profile_details #hero li {
    list-style: none;
    display: inline-block;
}

.profile_details #hero img.avatar {
    max-height: 125px;
    max-width: 125px;
    border-radius: 60px;
    border: 3px white solid;
}

.profile_details #hero ul {
    margin-left: 0px;
    padding-left: 0px;
}

.profile_details #hero .authors img {
    max-height: 45px;
    max-width: 45px;
    border-radius: 30px;
    border: 3px white solid;
    margin-right: -20px;
}

.profile_details #hero .ctas img {
    width: 25px;
    height: 25px;
    filter: invert(100%);
    margin: 10px;
}

.profile_details #hero .ctas img:hover {
    filter: invert(90%);
}

.profile_details #hero p {
    color: #919191;
}

.profile_details .bounties li {
    list-style: none;
    padding-top: 10px;
    height: 80px;
}

.profile_details .bounties li:hover {
    background-color: #fafafa;
    cursor: pointer;
}

.profile_details .bounties li a {
    color: black;
}

.profile_details .bounties li a.btn {
    color: white;
}

.profile_details .bounties li div.status,
.profile_details .bounties li div.relationship {
    height: 80px;
    width: 100px;
    display: inline-block;
    vertical-align: middle;
    text-align: center;
}
/* ... */

